--- a/app/code/Training4/VendorList/view/frontend/layout/training_vendor_listvendor.xml
+++ b/app/code/Training4/VendorList/view/frontend/layout/training_vendor_listvendor.xml
@@ -10,9 +10,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Training4\VendorList\Block\Vendor\VendorList" name="vendor.list" template="vendor.phtml">
-                <block class="Training4\VendorList\Block\Vendor\VendorList\Toolbar" name="vendor.toolbar"
-                       template="vendor/toolbar.phtml"/>
+            <block class="Training4\VendorList\Block\Vendor\VendorList" name="vendor.list" template="vendor/list.phtml">
+                <block class="Training4\VendorList\Block\Vendor\VendorList\Toolbar" name="vendor.list.toolbar"
+                       template="vendor/list/toolbar.phtml"/>
             </block>
         </referenceContainer>
     </body>
