Refactor blocks/templates

--- a/app/code/Training4/VendorList/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/Training4/VendorList/view/frontend/layout/catalog_product_view.xml
@@ -10,7 +10,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Training4\VendorList\Block\Product\View\Vendor" name="product.info.vendor" before="-" template="vendor.phtml"/>
+            <block class="Training4\VendorList\Block\Product\View\Vendor" name="product.info.vendor" before="-"
+                   template="product/view/vendor.phtml"/>
         </referenceContainer>
     </body>
 </page>
