--- a/app/code/Training4/VendorList/view/frontend/templates/vendor.phtml
+++ b/app/code/Training4/VendorList/view/frontend/templates/vendor.phtml
@@ -6,10 +6,26 @@
  * @copyright   Copyright © 2015 Blue Acorn, Inc.
  */
 ?>
-<div class="product-vendors-container">
-    <ul>
-        <?php foreach($this->getVendors() as $vendor): ?>
-            <li class="vendor-name"><?php echo $vendor->getName() ?></li>
-        <?php endforeach ?>
-    </ul>
+<?php
+$vendor = $block->getVendor();
+$products = $block->getProducts() ?: [];
+?>
+<div class="vendor">
+    <span class="vendor-id">Vendor ID: <?php echo $vendor->getId() ?></span>
+    <?php if ($products): ?>
+        <div class="vendor-products">
+            Vendor Products:
+            <ul>
+                <?php foreach ($products as $id => $product): ?>
+                <li>
+                    <span data-product-id="<?php echo $id ?>">
+                        <?php echo $id ?>
+                        &emsp;
+                        <?php echo $product->getName() ?>
+                    </span>
+                </li>
+                <?php endforeach ?>
+            </ul>
+        </div>
+    <?php endif ?>
 </div>
